--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "cmake"]
 	path = cmake
-	url = https://Ad-Ag@bitbucket.org/agdevs/cmake_helpers.git
+	url = https://github.com/Adnn/cmake_helper.git
