Rename GraphicsPipeline to NaivePipeline. Prepare scene for Z buffer.

--- a/src/apps/ch8/graphics_pipeline/CMakeLists.txt
+++ b/src/apps/ch8/graphics_pipeline/CMakeLists.txt
@@ -2,8 +2,8 @@ set(TARGET_NAME ch8-graphics_pipeline)
 
 set(${TARGET_NAME}_HEADERS
     Clipping.h
-    GraphicsPipeline.h
     Line.h
+    NaivePipeline.h
     Rasterization.h
     Scene.h
     Triangle.h
