--- a/src/apps/ch8/graphics_pipeline/CMakeLists.txt
+++ b/src/apps/ch8/graphics_pipeline/CMakeLists.txt
@@ -4,9 +4,12 @@ set(${TARGET_NAME}_HEADERS
     Clipping.h
     GraphicsPipeline.h
     Line.h
+    ObjLoader.h
+    ObjModels.h
     NaivePipeline.h
     Rasterization.h
     Scene.h
+    Shaders.h
     Triangle.h
 )
 
@@ -30,11 +33,12 @@ set_target_properties(${TARGET_NAME} PROPERTIES
 ##
 
 find_package(Math REQUIRED COMPONENTS math)
-find_package(Graphics REQUIRED COMPONENTS arte platform)
+find_package(Graphics REQUIRED COMPONENTS arte graphics platform)
 
 target_link_libraries(${TARGET_NAME}
     PRIVATE
         ad::arte
+        ad::graphics
         ad::math
         ad::platform)
 
