--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(apps/ch3/exercise-raster_images)
 add_subdirectory(apps/ch4/ray_tracer)
 add_subdirectory(apps/ch7/rasterizer_wireframe)
 add_subdirectory(apps/ch8/graphics_pipeline)
+add_subdirectory(apps/ch8/02-graphics_pipeline)
