Render the bunny in addition to the cube with ch8-02.

--- a/src/apps/ch8/02-graphics_pipeline/CMakeLists.txt
+++ b/src/apps/ch8/02-graphics_pipeline/CMakeLists.txt
@@ -33,14 +33,16 @@ set_target_properties(${TARGET_NAME} PROPERTIES
 ##
 
 find_package(Math REQUIRED COMPONENTS math)
-find_package(Graphics REQUIRED COMPONENTS arte graphics platform)
+find_package(Graphics REQUIRED COMPONENTS arte graphics platform resource)
 
 target_link_libraries(${TARGET_NAME}
     PRIVATE
         ad::arte
         ad::graphics
         ad::math
-        ad::platform)
+        ad::platform
+        ad::resource
+)
 
 
 ##
