--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,5 @@
+add_subdirectory(libs/focg-assets/focg-assets)
+
 add_subdirectory(apps/ch3/exercise-raster_images)
 add_subdirectory(apps/ch4/ray_tracer)
 add_subdirectory(apps/ch7/rasterizer_wireframe)
