--- a/src/apps/ch8/02-graphics_pipeline/CMakeLists.txt
+++ b/src/apps/ch8/02-graphics_pipeline/CMakeLists.txt
@@ -37,6 +37,8 @@ find_package(Graphics REQUIRED COMPONENTS arte graphics platform resource)
 
 target_link_libraries(${TARGET_NAME}
     PRIVATE
+        focg-assets
+
         ad::arte
         ad::graphics
         ad::math
