--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,12 @@ output_images/
 .clangd/
 compile_commands.json
 
+# CMake #
+CMakeUserPresets.json
+
+# Conan #
+graph_info.json
+
 # Vim #
 *.swp
 *.swo
